added nuget package

--- a/Observable/Observable/Observable.csproj
+++ b/Observable/Observable/Observable.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <RootNamespace>RenditionStudios.Library.NET.Observable</RootNamespace>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
 </Project>
